Working on the users endpoint
